kustomize/overlays/homecloud/apps/dev/code-server-ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  namespace: dev
  name: code-server-ingress
  labels:
    app: code-server

spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: code-server
      port:
        number: 80
  tls:
    - hosts:
        - dev-code
