kustomize/overlays/homecloud/apps/dev/pgadmin-ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  namespace: dev
  name: pgadmin-ingress
  labels:
    app: pgadmin

spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: pgadmin
      port:
        number: 80
  tls:
    - hosts:
        - dev-pgadmin
